# ImageProcessingTestTask

./: .clang-format  CMakeLists.txt  README.md  install.sh
include/: MainWindow.hpp  matrix.hpp  processing.hpp
src/: MainWindow.cpp  MainWindow.ui  main.cpp
tests/: test_matrix.cpp  test_processing.cpp
